Added basic html and content, added some CSS to limit measure and set the initial font size

--- a/index.html
+++ b/index.html
@@ -19,14 +19,24 @@
 	<!-- Fonts -->
 
 	<!-- Styles -->
+	<!-- Styles -->
+	<link rel="stylesheet" href="main.css">
 
 </head>
 
 <body>
 
-	<p>Hello!</p>
-	<p>My name is Sander and I’m a designer based in Tallinn, Estonia. I’ve helped clients both big and small with websites, apps, design systems, branding, installations, books and more. Currently design manager at Funderbeam. I like to keep things clean and simple, love movies, food, travelling, bicycles and making pictures.</p>
-	<p>Thanks for stopping by, have a very nice day!</p>
+	<main>
+		<section>
+			<h1>Hello!</h1>
+			<p>My name is Sander and I’m a designer based in Tallinn, Estonia. I’ve helped clients both big and small with websites, apps, design systems, branding, installations, books and more. Currently design manager at Funderbeam. I like to keep things clean and simple, love movies, food, travelling, bicycles and making pictures.</p>
+			<p>Thanks for stopping by, have a very nice day!</p>
+		</section>
+
+	</main>
+	<footer>
+		<small>&copy; 2016 - 2020 Sander solvak</small>
+	</footer>
 
 </body>
 </html>
