Added placeholder page for /blog

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Sander</title>
+	<title>/blog</title>
 
 	<meta name="description" content="The online home of graphic designer Sander Solvak.">
 	<meta name="keywords" content="graphic design, web design, webdesign, print design, identity design, user interface design, UI design">
@@ -26,13 +26,29 @@
 <body>
 
 	<main>
-		<section>
-			<h1>Hello!</h1>
-			<p>My name is Sander and I’m a designer based in Tallinn, Estonia. I’ve helped clients both big and small with websites, apps, design systems, branding, installations, books and more. Currently design manager at Funderbeam. I like to keep things clean and simple, love movies, food, travelling, bicycles and making pictures.</p>
-			<p>Thanks for stopping by, have a very nice day!</p>
-		</section>
+
+		<article>
+			<header>
+				<h2>Blog post title</h2>
+				<time>January 8, 2020</time>
+			</header>
+			<section>
+				<p>Blog post content goes here</p>
+			</section>
+		</article>
+
+		<article>
+			<header>
+				<h2>Blog post title</h2>
+				<time>January 2, 2020</time>
+			</header>
+			<section>
+				<p>Blog post content goes here</p>
+			</section>
+		</article>
 
 	</main>
+
 
 	<footer>
 		<small>&copy; 2016 - 2020 Sander solvak</small>
