Added semi-placeholder content to the homepage, switched from CSS to LESS

--- a/index.html
+++ b/index.html
@@ -27,24 +27,49 @@
 
 	<main>
 
-		<main>
+		<article>
+			<header>
+				<h1>Hello!</h1>
+			</header>
+			<section>
+				<p>My name is Sander and I’m a designer based in <a href="#">Tallinn,</a> Estonia. I’ve helped clients both big and small with websites, apps, design systems, branding, installations, books and more. Currently design manager at <a href="https://www.funderbeam.com/">Funderbeam</a>. I like to keep things clean and simple, love <a href="https://letterboxd.com/sandersolvak/">movies,</a> food, <a href="https://www.flickr.com/photos/sandersolvak/albums">travelling,</a> bicycles and making pictures.</p>
+				<p>Thanks for stopping by, have a very nice day!</p>
+			</section>
+		</article>
 
-			<article>
-				<header>
-					<h1>Hello!</h1>
-				</header>
-				<section>
-					<p>My name is Sander and I’m a designer based in Tallinn, Estonia. I’ve helped clients both big and small with websites, apps, design systems, branding, installations, books and more. Currently design manager at Funderbeam. I like to keep things clean and simple, love movies, food, travelling, bicycles and making pictures.</p>
-					<p>Thanks for stopping by, have a very nice day!</p>
-				</section>
-			</article>
+		<!-- Recent posts -->
+		<section>
+			<h2>Recent posts</h2>
+			<ul class="no-bullet">
+				<li><a href="#">The one about bike lanes.</a> <span>01 Jan 2020</span></li>
+				<li><a href="#">"The Last Black Man in San Francisco" </a> <span>16 Dec 2019</span></li>
+				<li><a href="#">Not a zero sum game.</a> <span>01 Dec 2019</span></li>
+				<li><a href="#" class="link-arrow">See all</a></li>
+			</ul>
 
-		</main>
+		</section>
+
+		<!-- Recent work -->
+		<section>
+			<h2>Recent work</h2>
+			<ul class="no-bullet">
+				<li><a href="#">Website for funderbeam</a></li>
+				<li><a href="#">Illustration for Katana</a></li>
+				<li><a href="#">UI design for FlowHow</a></li>
+				<li><a href="#" class="link-arrow">See all</a></li>
+			</ul>
+		</section>
+
+		<!-- Contact -->
+		<section>
+			<h2>Connect</h2>
+			<p>Subscribe to the journal <a href="#">RSS feed</a> or, there's <a href="https://twitter.com/sandersolvak">twitter,</a> <a href="https://ee.linkedin.com/in/sandersolvak">linkedin</a> and <a href="mailto:hi@solvak.ee">e-mail.</a></p>
+		</section>
 
 	</main>
 
 	<footer>
-		<small>&copy; 2016 - 2020 Sander solvak</small>
+		<small>&copy; 2016 - 2020 Sander Solvak. Be nice, OK.</small>
 	</footer>
 
 </body>
