First draft of the About page

--- a/about.html
+++ b/about.html
@@ -29,17 +29,33 @@
 
 	<article>
 		<header>
-			<h1>About</h1>
+			<h1>About me</h1>
 		</header>
 		<section>
-			<p>About this thing here.</p>
+			<p>(waving hand emoji)</p>
+			<p>Hi, again. Short bio.</p>
+			<p>Thanks for reading.</p>
 		</section>
+	</article>
+	<article >
+		<h2>Connect</h2>
+		<p>If you want to get in touch for a project, it's best to <a href="mailto:hi@solvak.ee">e-mail me.</a></p>
+		<p>I'm also on <a href="https://ee.linkedin.com/in/sandersolvak">LinkedIn</a> and <a href="https://twitter.com/sandersolvak">twitter.</a></p>
+	</article>
+	<article>
+		<h2>Colophon</h2>
+		<p>This site is designed and built by yours truly. The headings are set in <a href="http://prospectus.losttype.com/">Prospectus</a> and the rest in <a href="https://github.com/impallari/Libre-Franklin">Libre Franklin.</a> It runs on a lovely little cms called Perch. No tracking, no snooping, no bullshit. Simple.</p>
+	</article>
+	<article>
+		<h2>Shout-outs</h2>
+		<p>People I've learned a lot from and think you might too. Or just cool sites. Hat tips all around, a.k.a. a <a href="https://en.wiktionary.org/wiki/blogroll">blogroll.</a></p>
+
 	</article>
 
 </main>
 
 	<footer>
-		<small>&copy; 2016 - 2020 Sander solvak</small>
+		<small>&copy; 2016 - 2020 Sander Solvak. Be nice, OK.</small>
 	</footer>
 
 </body>
