--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 </head>
 
 <body>
-
+	<nav>
+		<a href="index.html"> / home</a>
+		<a href="work.html"> / work</a>
+		<a href="journal.html"> / journal</a>
+		<a href="about.html"> / about</a>
+	</nav>
 	<main>
 
 		<article>
