Updated temporary navigation paths

--- a/about.html
+++ b/about.html
@@ -24,20 +24,28 @@
 </head>
 
 <body>
-
+	<nav>
+		<a href="index.html"> / home</a>
+		<a href="./work/work.html"> / work</a>
+		<a href="./journal/journal.html"> / journal</a>
+		<a href="about.html"> / about</a>
+	</nav>
 <main>
 
 	<article>
 		<header>
 			<h1>About me</h1>
 		</header>
-		<section>
+		<section aria-label="bio">
 			<p>(waving hand emoji)</p>
-			<p>Hi, again. Short bio.</p>
-			<p>Thanks for reading.</p>
+			<p>Hi, I'm Sander Solvak, a designer based in Tallinn, Estonia. For over 15 years I've helped clients both big and small with websites, apps, design systems, branding, books and more.</p>
+			<p>I believe in keeping things clean and simple, love finding elegant solutions to problems and try leave things better than I found them.</p>
+			<p>I'm currently leading design and changing fintech at <a href="https://www.funderbeam.com">Funderbeam.</a> Previously, I was a design generalist at Playtech, working on everything from tradeshows and print designs of all shapes and sizes to websites and user interfaces. Time permitting, I still occasionally take on freelance projects.</p>
+			<p>My time off is spent with <a href="https://letterboxd.com/sandersolvak/">movies,</a> cooking, <a href="https://www.flickr.com/photos/sandersolvak/albums">travelling,</a> on my bike or taking pictures.</p>
 		</section>
 	</article>
-	<article >
+
+	<article>
 		<h2>Connect</h2>
 		<p>If you want to get in touch for a project, it's best to <a href="mailto:hi@solvak.ee">e-mail me.</a></p>
 		<p>I'm also on <a href="https://ee.linkedin.com/in/sandersolvak">LinkedIn</a> and <a href="https://twitter.com/sandersolvak">twitter.</a></p>
