--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <body>
 	<nav>
 		<a href="index.html"> / home</a>
-		<a href="work.html"> / work</a>
-		<a href="journal.html"> / journal</a>
+		<a href="./work/work.html"> / work</a>
+		<a href="./journal/journal.html"> / journal</a>
 		<a href="about.html"> / about</a>
 	</nav>
 	<main>
