--- a/work/work.html
+++ b/work/work.html
@@ -19,12 +19,17 @@
 	<!-- Fonts -->
 
 	<!-- Styles -->
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="../main.css">
 
 </head>
 
 <body>
-
+	<nav>
+		<a href="../index.html"> / home</a>
+		<a href="../work/work.html"> / work</a>
+		<a href="../journal/journal.html"> / journal</a>
+		<a href="../about.html"> / about</a>
+	</nav>
 	<main>
 
 		<article>
