Placeholder html for the /work section

--- a/work/project-a/project-a.html
+++ b/work/project-a/project-a.html
@@ -19,26 +19,30 @@
 	<!-- Fonts -->
 
 	<!-- Styles -->
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="../../main.css">
 
 </head>
 
 <body>
-
+	<nav>
+		<a href="../../index.html"> / home</a>
+		<a href="../work.html"> / work</a>
+		<a href="../../journal/journal.html"> / journal</a>
+		<a href="../../about.html"> / about</a>
+	</nav>
 	<main>
 
-		<article>
-			<header>
-				<h1>Project A</h1>
-			</header>
-			<section>
-				<p>content</p>
-			</section>
-		</article>
-
+		<header>
+			<h1>Project A</h1>
+			<p>project description</p>
+		</header>
+		
+		<section>
+			<img src="memgrid-06.png" alt="Memgrid iconography"/>
+			<p>content</p>
+		</section>
 
 	</main>
-
 
 	<footer>
 		<small>&copy; 2016 - 2020 Sander solvak</small>
