--- a/work/work.html
+++ b/work/work.html
@@ -32,18 +32,32 @@
 	</nav>
 	<main>
 
-		<article>
-			<header>
-				<h1>work main</h1>
-			</header>
-			<section>
+		<header>
+			<h1>Selected work</h1>
+		</header>
+		
+		<div>
+			<a href="../work/project-a/project-a.html">
+				<img src="../work/project-a/memgrid-06.png" alt="Memgrid iconography"/>
 				<p>project A</p>
-			</section>
-			<section>
-				<p>project B</p>
-			</section>
-		</article>
+			</a>
+		</div>
 
+		<div>
+			<a href="../work/project-a/project-a.html">
+				<img src="../work/project-a/memgrid-06.png" alt="Memgrid iconography"/>
+				<p>project B</p>
+			</a>
+		</div>
+
+		<div>
+			<a href="../work/project-a/project-a.html">
+				<img src="../work/project-a/memgrid-06.png" alt="Memgrid iconography"/>
+				<p>project C</p>
+			</a>
+		</div>
+
+		<p>If you liked what you saw and think I could help, it's best to <a href="mailto:hi@solvak.ee">e-mail me.</a></p>
 
 	</main>
 
