Hooked up web fonts

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 	<!-- Favicons -->
 
 	<!-- Fonts -->
-
+	<style type="text/css">
+	/* insert base64 encoded fonts here */
+	</style>
+	
 	<!-- Styles -->
 	<link rel="stylesheet" href="main.css">
 
