Text styling, mostly, and CSS custom properties, and a styles.html page to develop CSS.

--- a/journal/journal.html
+++ b/journal/journal.html
@@ -44,14 +44,17 @@
 				<p>Libre Franklin Light at 16pt. Folders are hard. They’re hard in the sense of the mental burden of organising information into deep hierarchies. Coming up with a logical structure and navigating it later takes mental energy. Much like the simple fact of having gears on your bike reserves some of your brain to constantly think about them. You may not notice it and if someone tried to tell you it’s so, you might even disagree. It’s such a small and unnoticeable thing. But these things add up, and you really should use your brain for more important stuff.
 				</p>
 				<figure>
-    			<img src="../work/projects/memgrid-06.png" alt="Memgrid iconography">
+    			<img src="../work/project-a/memgrid-06.png" alt="Memgrid iconography">
     			<figcaption>Memgrid iconography</figcaption>
 				</figure>
 				<p>Folders are also hard in the sense of being <b>unconditional</b> &mdash; you’re taking some stuff, putting it into a drawer and closing it. It’s hiding things from view, making you remember where, in which drawer that thing you’re looking for is.</p>
-				<blockquote cite="http://">
-					<p>"Chestnut brown crust marks are an indication that great care has gone into preparing the French toast, and above all, this is what concerns me the most: that you care. You must care about the French toast. If you don’t care about the French toast, then perhaps you don’t care about anything."</p>
-					<footer>—Stanley Kubrick</footer>
-				</blockquote>
+				<figure class="pullquote">
+					<blockquote>
+						"Chestnut brown crust marks are an indication that great care has gone into preparing the French toast, and above all, this is what concerns me the most: that you care. You must care about the French toast. If you don’t care about the French toast, then perhaps you don’t care about anything.""
+					</blockquote>
+					<figcaption>&mdash; Stanley Kubrick</figcaption>
+				</figure>
+
 				<p>The groups would be collapsible and show how many files they hold just like the current way groups work in <a href="#">Windows 7.</a> You could rename a group any time and also change it’s color, for example you could decide that groups containing preview files are always blue and groups of client files are red, making them easy to distinguish by a glance. Deleting a group would not.</p>
 			</section>
 		</article>
