Added first iteration of global navigation

--- a/styles.html
+++ b/styles.html
@@ -28,10 +28,12 @@
 
 <body>
 	<nav>
-		<a href="index.html"> / home</a>
-		<a href="./work/work.html"> / work</a>
-		<a href="./journal/journal.html"> / journal</a>
-		<a href="about.html"> / about</a>
+		<a href="index.html">home</a>
+		<a href="./work/work.html">work</a>
+		<a href="./journal/journal.html">journal</a>
+		<a href="#">play</a>
+		<a href="#">photo</a>
+		<a href="about.html">about</a>
 	</nav>
 	<main>
 
@@ -102,6 +104,11 @@
 			</ul>
 
 		</article>
+
+		<article>
+						<a href="#"><img src="journal/posts/screenshot-of-La_Grande_Bellezza_-_Paulo_Sorrentino_-_2013.jpg" alt="Screenshot of the movie 'La Grande Bellezza' by Paulo Sorrentino"></a>
+		</article>
+
 		<article>
 			<h2>Miscellanea</h2>
 			<p>Code:</p>
@@ -115,7 +122,6 @@
 &lt;/figure&gt;
 				</code>
 			</pre>
-
 		</article>
 
 	</main>
