Optimised and simplified layout CSS, updated work layout, added initial styling for individual project page

--- a/styles.html
+++ b/styles.html
@@ -28,7 +28,7 @@
 
 <body>
 	<nav>
-		<a href="index.html" class="home">
+		<a href="index.html" class="home"><span class="hidden">Home</span>
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
 			  <path d="M4.07 19.87c1.27 1.14 2.8 1.72 4.59 1.72 1.72 0 4.44-.82 8.17-2.46 7.09-3.01 11.83-4.51 14.22-4.51 2.26 0 4.26.85 5.99 2.54 1.73 1.69 2.72 4.42 2.97 8.17h-1.79c-.87-4.53-3.16-6.79-6.86-6.79-1.49 0-4.49.91-8.99 2.74s-7.46 2.97-8.88 3.43c-1.42.46-2.82.69-4.22.69-2.51 0-4.65-.94-6.42-2.82C1.07 20.7.12 18.07 0 14.68h1.79c.25 2.32 1.01 4.05 2.28 5.19z"></path>
 			</svg>
