Updated layout to always stick footer to the bottom

--- a/work/project-a/project-a.html
+++ b/work/project-a/project-a.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>/work/project A</title>
+	<title>Project A / Work / Sander Solvak</title>
 
 	<meta name="description" content="The online home of graphic designer Sander Solvak.">
 	<meta name="keywords" content="graphic design, web design, webdesign, print design, identity design, user interface design, UI design">
@@ -61,7 +61,9 @@
 
 				<p>The groups would be collapsible and show how many files they hold just like the current way groups work in <a href="#">Windows 7.</a> You could rename a group any time and also change it’s color, for example you could decide that groups containing preview files are always blue and groups of client files are red, making them easy to distinguish by a glance. Deleting a group would not.</p>
 			</section>
+
 		</article>
+		<a href="../work.html" class="link-left">See all projects</a>
 
 	</main>
 
