Corrects an overreaching link style on the portfolio page

--- a/work/work.html
+++ b/work/work.html
@@ -40,7 +40,7 @@
 			<h1>Selected work</h1>
 		</header>
 
-		<section class="two-col">
+		<section class="projects two-col">
 			<div>
 				<a href="../work/project-a/project-a.html">
 					<img src="../work/project-a/memgrid-06.png" alt="Memgrid iconography"/>
