--- a/work/project-a/project-a.html
+++ b/work/project-a/project-a.html
@@ -25,14 +25,14 @@
 
 <body>
 	<nav>
-		<a href="../../index.html" class="home"><span class="hidden">Home</span>
+		<a href="../../index.html" class="home" title="Homepage"><span class="hidden">Home</span>
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
 			  <path d="M27.1 14.2c5.3 0 8.5 5.3 8.9 10.3l-.7.1c-.2 0-.3-.1-.4-.2-1.5-4-5.9-4.7-9.6-3.3-2.2.8-6.3 3.3-8.5 4C9.9 27.7 4.5 22.4 4 15.5l.7-.1c.2 0 .3.1.4.2 1.5 4 5.9 4.7 9.6 3.3 3.8-1.4 8.1-4.8 12.4-4.7z"/>
 			</svg>
 		</a>
-		<a href="../work.html" class="active">Work</a>
-		<a href="../../journal/journal.html">Journal</a>
-		<a href="../../about.html">About</a>
+		<a href="../work.html" title="My work" class="active">Work</a>
+		<a href="../../journal/journal.html" title="Where I write and share stuff">Journal</a>
+		<a href="../../about.html" title="About me and this site">About</a>
 	</nav>
 
 	<main>
@@ -74,7 +74,18 @@
 	</main>
 
 	<footer>
-		<small>&copy; 2016 - 2020 Sander Solvak. Be nice, OK ☀</small>
+		<div class="nav-footer">
+			<a href="../../index.html" class="home" title="Homepage"><span class="hidden">Home</span>
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+					<path d="M27.1 14.2c5.3 0 8.5 5.3 8.9 10.3l-.7.1c-.2 0-.3-.1-.4-.2-1.5-4-5.9-4.7-9.6-3.3-2.2.8-6.3 3.3-8.5 4C9.9 27.7 4.5 22.4 4 15.5l.7-.1c.2 0 .3.1.4.2 1.5 4 5.9 4.7 9.6 3.3 3.8-1.4 8.1-4.8 12.4-4.7z"/>
+				</svg>
+			</a>
+			<a href="../work.html" title="My work">Work</a>
+			<a href="../../journal/journal.html" title="Where I write and share stuff">Journal</a>
+			<a href="../../about.html" title="About me and this site">About</a>
+			<a href="#" title="Subscribe to the Journals RSS feed">RSS</a>
+		</div>
+		<small>&copy; 2016 - 2020 Sander Solvak. Be nice, OK <span class="sun">☀</span></small>
 	</footer>
 
 </body>
