--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 
 	<!-- Favicons -->
+	<link rel="icon" type="image/svg+xml" href="favicon.svg">
 
 	<!-- Fonts -->
 	<style type="text/css">
