Main nav CSS tweaks, updated footer on index page, added Perch to gitignore, various Perch related and other bits

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<h1>Hello!</h1>
 			</header>
 			<section>
-				<p>My name is Sander and I’m a designer based in <a href="#">Tallinn,</a> Estonia. I’ve helped clients both big and small with websites, apps, design systems, branding, installations, books and more. Currently design manager at <a href="https://www.funderbeam.com/">Funderbeam</a>. I like to keep things clean and simple, love <a href="https://letterboxd.com/sandersolvak/">movies,</a> food, <a href="https://www.flickr.com/photos/sandersolvak/albums">travelling,</a> bicycles and making pictures.</p>
+				<p>My name is Sander and I’m a designer based in Tallinn, Estonia. I’ve helped clients both big and small with websites, apps, design systems, branding, installations, books and more. Currently design manager at <a href="https://www.funderbeam.com/">Funderbeam</a>. I like to keep things clean and simple, love <a href="https://letterboxd.com/sandersolvak/">movies,</a> food, <a href="https://www.flickr.com/photos/sandersolvak/albums">travelling,</a> bicycles and making pictures.</p>
 				<p>Thanks for stopping by, have a very nice day!</p>
 			</section>
 		</article>
@@ -86,7 +86,18 @@
 	</main>
 
 	<footer>
-		<small>&copy; 2016 - 2020 Sander Solvak. Be nice, OK ☀</small>
+		<div class="nav-footer">
+			<a href="./index.html" class="home" title="Homepage"><span class="hidden">Home</span>
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+					<path d="M27.1 14.2c5.3 0 8.5 5.3 8.9 10.3l-.7.1c-.2 0-.3-.1-.4-.2-1.5-4-5.9-4.7-9.6-3.3-2.2.8-6.3 3.3-8.5 4C9.9 27.7 4.5 22.4 4 15.5l.7-.1c.2 0 .3.1.4.2 1.5 4 5.9 4.7 9.6 3.3 3.8-1.4 8.1-4.8 12.4-4.7z"/>
+				</svg>
+			</a>
+			<a href="./work/work.html" title="My work">Work</a>
+			<a href="./journal/journal.html" title="Where I write and share stuff">Journal</a>
+			<a href="about.html" title="About me and this site">About</a>
+			<a href="#" title="Subscribe to the Journals RSS feed">RSS</a>
+		</div>
+		<small>&copy; 2016 - 2020 Sander Solvak. Be nice, OK <span class="sun">☀</span></small>
 	</footer>
 
 </body>
