--- a/work/project-a/project-a.html
+++ b/work/project-a/project-a.html
@@ -47,7 +47,7 @@
 			</header>
 
 			<div class="col-2">
-				<p>FlowHow developed a tool to help companies get their agile workflow on track and keep it that way. It works by tapping into a company's Jira, crunches the data and automagically shows you how your teams are doing in terms of agile best practices, how to improve your workflows continuously and sprinkles some gamification on top of it all.</p>
+				<p class="lede">FlowHow developed a tool to help companies get their agile workflow on track and keep it that way. It works by tapping into a company's Jira, crunches the data and automagically shows you how your teams are doing in terms of agile best practices, how to improve your workflows continuously and sprinkles some gamification on top of it all.</p>
 			</div>
 
 			<img class="wide m-vert--l" src="img-004.png" alt="">
