Portfolio project working file

--- a/work/project-a/project-a.html
+++ b/work/project-a/project-a.html
@@ -38,7 +38,7 @@
 	<main>
 
 		<article class="post project">
-			<img class="cover" src="img-002.png" alt="">
+			<img class="cover" src="playtech-001.jpg" alt="" loading=lazy>
 
 			<header>
 				<h1>FlowHow</h1>
@@ -50,23 +50,35 @@
 				<p class="lede">FlowHow developed a tool to help companies get their agile workflow on track and keep it that way. It works by tapping into a company's Jira, crunches the data and automagically shows you how your teams are doing in terms of agile best practices, how to improve your workflows continuously and sprinkles some gamification on top of it all.</p>
 			</div>
 
-			<img class="wide m-vert--l" src="img-004.png" alt="">
+			<img class="wide" src="playtech-002.jpg" alt="" loading=lazy>
 
 			<div class="col-1">
 				<p>Designing the tool's UI posed some interesting challenges such as how does one visualise certain agile practices such as sprint cadence and velocity characteristics and the patterns that emerge.</p>
 			</div>
 
-			<img class="wide" src="img-005.png" alt="">
-
-			<div class="col-2">
-				<p>We made our best effort to practice what we preach and work as an agile team, effectively using the tool on ourselves while building it.
-				</p>
-			</div>
+			<img class="wide" src="logos-AlsoKnowsIT.jpg" alt="" loading=lazy>
+			<figure class="wide">
+				<img src="logos-JointVentureProjects.jpg" alt="" loading=lazy>
+				<figcaption>Joint Venture Projects</figcaption>
+			</figure>
+			<img class="wide" src="logos-JuegosDeElSalvador.jpg" alt="" loading=lazy>
+			<img class="wide" src="logos-MagnetWorks.jpg" alt="" loading=lazy>
+			<img class="wide" src="logos-MayaLotto.jpg" alt="" loading=lazy>
+			<img class="wide" src="logos-MichetConsulting.jpg" alt="" loading=lazy>
+			<img class="wide" src="logos-Naidud.jpg" alt="" loading=lazy>
+			<img class="wide" src="logos-PlaytechMentoringProgramme.jpg" alt="" loading=lazy>
+			<img class="wide" src="logos-visand.jpg" alt="" loading=lazy>
 
 			<figure class="wide">
-				<img src="memgrid-06.png" alt="Memgrid iconography">
-				<figcaption>Memgrid iconography</figcaption>
+				<video  preload="none" poster="statlab-web-poster.jpg" autoplay playsinline loop muted>
+					<source src="statlab-web.webm" type="video/webm" >
+					<source src="statlab-web.mp4" type="video/mp4" >
+				</video>
 			</figure>
+
+			<div class="col-2">
+				<p>We made our best effort to practice what we preach and work as an agile team, effectively using the tool on ourselves while building it.</p>
+			</div>
 
 		</article>
 		<a href="../work.html" class="link-left">See all projects</a>
