--- a/content/home/home.html
+++ b/content/home/home.html
@@ -20,7 +20,7 @@
 	<!-- Fonts -->
 	<style type="text/css">
 	/* insert base64 encoded fonts here */
-	
+
 	</style>
 
 	<!-- Styles -->
@@ -57,7 +57,7 @@
 
 		<article>
 			<header>
-				<h2>Recent posts</h2>
+				<h2>Recent notes</h2>
 			</header>
 			<section>
 				<ul class="no-bullet">
